some ports do not ./configure

--- a/pstree/Makefile
+++ b/pstree/Makefile
@@ -4,9 +4,11 @@ VERSION		= 2.39
 DESCRIPTION	= list processes as a tree
 HOMEPAGE	= http://www.thp.uni-duisburg.de/pstree/
 DOWNLOAD	= ftp://ftp.thp.uni-duisburg.de/pub/source/
-TARDIR		= $(NAME)-$(VERSION)
 
-# Instead of the aritificial ./configure creating the artificial Makefile.
+TARDIR		= $(NAME)-$(VERSION)
+CONFIGURE	=
+
+# Instead of the aritificial Makefile,
 # we should overrride the build and install target like OpenBSD does (viz).
 # But we don't have that infrastructure yet.
 
