--- a/opus/Makefile
+++ b/opus/Makefile
@@ -1,7 +1,7 @@
 NAME		= opus
 VERSION		= 1.2.1
 
-DESCRIPTON	= Opus audio codec
+DESCRIPTION	= Opus audio codec
 HOMEPAGE	= http://www.opus-codec.org
 DOWNLOAD	= https://archive.mozilla.org/pub/opus
 
