--- a/bzip2/Makefile
+++ b/bzip2/Makefile
@@ -2,7 +2,7 @@ NAME		= bzip2
 VERSION		= 1.0.6
 
 DESCRIPTION	= compression library and tools
-HOMEPAGE	= http://www.bzip.org/
+HOMEPAGE	= https://web.archive.org/web/20180624184806/http://www.bzip.org
 DOWNLOAD	= $(HOMEPAGE)/$(VERSION)
 CONFIGURE	= 
 
