mandoc ./configure takes no args

--- a/mandoc/Makefile
+++ b/mandoc/Makefile
@@ -1,10 +1,11 @@
 NAME		= mandoc
-VERSION		= 1.14.3
+VERSION		= 1.14.4
 
 DESCRIPTION	= UNIX manpage compiler
 HOMEPAGE	= https://mandoc.bsd.lv/
 DOWNLOAD	= https://mandoc.bsd.lv/snapshots/
 
-CONFIGURE_ARGS =	
+CONFIGURE_ARGS	=
+FAKEDIR		= /tmp/fakemandoc
 
 include ../ports.mk
