pstree: the tarball contains no subdir

--- a/pstree/Makefile
+++ b/pstree/Makefile
@@ -5,19 +5,7 @@ DESCRIPTION	= list processes as a tree
 HOMEPAGE	= http://www.thp.uni-duisburg.de/pstree/
 DOWNLOAD	= ftp://ftp.thp.uni-duisburg.de/pub/source/
 
-TARDIR		= $(NAME)-$(VERSION)
+SRCDIR		= work
 CONFIGURE	=
-
-# Instead of the aritificial Makefile,
-# we should overrride the build and install target like OpenBSD does (viz).
-# But we don't have that infrastructure yet.
-
-#do-build:
-#cd ${WRKBUILD} && ${CC} ${CFLAGS} -o pstree pstree.c
-#
-#do-install:
-#${INSTALL_PROGRAM} ${WRKBUILD}/pstree ${PREFIX}/bin/pstree
-#${INSTALL_MAN} ${WRKBUILD}/pstree.1 ${PREFIX}/man/man1
-#
 
 include ../ports.mk
