--- a/tmux/Makefile
+++ b/tmux/Makefile
@@ -5,7 +5,7 @@ DESCRIPTION	= terminal multiplexer
 HOMEPAGE	= https://github.com/tmux/
 DOWNLOAD	= $(HOMEPAGE)/$(NAME)/releases/download/$(VERSION)/
 
+LIBDEP		= libevent
+
 include ../ports.mk
 
-#/usr/local/lib/libevent-2.1.6.dylib
-#/usr/lib/libncurses.5.4.dylib
