--- a/libevent/Makefile
+++ b/libevent/Makefile
@@ -6,11 +6,6 @@ HOMEPAGE	= http://libevent.org
 GITHUB		= https://github.com/$(NAME)/$(NAME)
 DOWNLOAD	= $(GITHUB)/releases/download/release-$(VERSION)
 
-#depends_lib         path:lib/libssl.dylib:openssl
-#patchfiles          patch-libressl.diff
-#patch.pre_args      -p1
-#use_autoreconf      yes
-#test.run            yes
-#test.target         verify
+LIBDEP		= libressl
 
 include ../ports.mk
