--- a/file/Makefile
+++ b/file/Makefile
@@ -1,3 +1,5 @@
+include ../defaults.mk
+
 NAME		= file
 VERSION		= 5.34
 
@@ -5,11 +7,4 @@ DESCRIPTION	= determine file type
 HOMEPAGE	= ftp://ftp.astron.com/pub/$(NAME)
 DOWNLOAD	= $(HOMEPAGE)
 
-include ../ports.mk
-
-#patchfiles          patch-magic-Makefile.am.diff \
-#patch-getline.diff
-#configure.args      --enable-fsect-man5
-#depends_lib         port:zlib
-#xinstall -W ${worksrcpath}/src/.libs file ${destroot}${prefix}/bin
-#xinstall -m 644 -W ${worksrcpath}/doc file.1 ${destroot}${prefix}/share/man/man1
+include ../port.mk
