--- a/flac/Makefile
+++ b/flac/Makefile
@@ -1,3 +1,5 @@
+include ../defaults.mk
+
 NAME		= flac
 VERSION		= 1.3.2
 
@@ -6,19 +8,15 @@ HOMEPAGE	= https://xiph.org/flac/
 DOWNLOAD	= http://downloads.xiph.org/releases/flac/
 SUFFIX		= tar.xz
 
-CONFIGURE_ARGS	= \
-		--disable-asm-optimizations	\
+CONFIGURE_ARGS	+= \
 		--enable-werror			\
+		--disable-asm-optimizations	\
 		--disable-stack-smash-protection\
 		--disable-valgrind-testing	\
 		--disable-doxygen-docs		\
 		--disable-xmms-plugin		\
 		--disable-cpplibs		\
 		--with-libiconv-prefix=/usr	\
-		--with-ogg=/usr/local/
+		--with-ogg=$(PREFIX)
 
-#--disable-oggtest	  Do not try to compile and run a test Ogg program
-#--disable-rpath	  do not hardcode runtime library paths
-#depends_lib         port:libiconv port:libogg
-
-include ../ports.mk
+include ../port.mk
