--- a/libevent/Makefile
+++ b/libevent/Makefile
@@ -1,3 +1,5 @@
+include ../defaults.mk
+
 NAME		= libevent
 VERSION		= 2.1.8-stable
 
@@ -6,6 +8,8 @@ HOMEPAGE	= http://libevent.org
 GITHUB		= https://github.com/$(NAME)/$(NAME)
 DOWNLOAD	= $(GITHUB)/releases/download/release-$(VERSION)
 
-LIBDEP		= libressl
+CONFIGURE_ARGS	+= \
+		--disable-malloc-replacement	\
+		--disable-samples
 
-include ../ports.mk
+include ../port.mk
