--- a/libressl/Makefile
+++ b/libressl/Makefile
@@ -1,3 +1,5 @@
+include ../defaults.mk
+
 NAME		= libressl
 VERSION		= 2.8.0
 
@@ -5,4 +7,4 @@ DESCRIPTION	= tls/crypto stack
 HOMEPAGE	= https://www.libressl.org
 DOWNLOAD	= https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/
 
-include ../ports.mk
+include ../port.mk
