--- a/opus/Makefile
+++ b/opus/Makefile
@@ -1,3 +1,5 @@
+include ../defaults.mk
+
 NAME		= opus
 VERSION		= 1.2.1
 
@@ -5,4 +7,4 @@ DESCRIPTION	= Opus audio codec
 HOMEPAGE	= http://www.opus-codec.org
 DOWNLOAD	= https://archive.mozilla.org/pub/opus
 
-include ../ports.mk
+include ../port.mk
