--- a/opusfile/Makefile
+++ b/opusfile/Makefile
@@ -1,3 +1,5 @@
+include ../defaults.mk
+
 NAME		= opusfile
 VERSION		= 0.10
 DESCRIPTION	= decode opus files
@@ -5,11 +7,4 @@ DESCRIPTION	= decode opus files
 HOMEPAGE	= http://www.opus-codec.org
 DOWNLOAD	= https://archive.mozilla.org/pub/opus
 
-#env PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/ pkg-config --libs opus
-#depends_lib         path:lib/libssl.dylib:openssl \
-                    #port:libogg \
-                    #port:libopus
-
-#patchfiles          patch-libressl.diff
-
-include ../ports.mk
+include ../port.mk
