--- a/tmux/Makefile
+++ b/tmux/Makefile
@@ -1,3 +1,5 @@
+include ../defaults.mk
+
 NAME		= tmux
 VERSION		= 2.7
 
@@ -5,7 +7,6 @@ DESCRIPTION	= terminal multiplexer
 HOMEPAGE	= https://github.com/tmux/
 DOWNLOAD	= $(HOMEPAGE)/$(NAME)/releases/download/$(VERSION)/
 
-LIBDEP		= libevent
+CONFIGURE_ARGS	+= LIBEVENT_CFLAGS=$(CPPFLAGS) LIBEVENT_LIBS=$(LDFLAGS)
 
-include ../ports.mk
-
+include ../port.mk
