--- a/libogg/Makefile
+++ b/libogg/Makefile
@@ -1,3 +1,5 @@
+include ../defaults.mk
+
 NAME		= libogg
 VERSION		= 1.3.3
 
@@ -5,4 +7,4 @@ DESCRIPTION	= Ogg Bitstream Library
 HOMEPAGE	= http://www.vorbis.com/
 DOWNLOAD	= https://ftp.osuosl.org/pub/xiph/releases/ogg/
 
-include ../ports.mk
+include ../port.mk
