--- a/libvorbis/Makefile
+++ b/libvorbis/Makefile
@@ -1,3 +1,5 @@
+include ../defaults.mk
+
 NAME		= libvorbis
 VERSION		= 1.3.6
 
@@ -5,6 +7,4 @@ DESCRIPTION	= the Ogg Vorbis audio codec
 HOMEPAGE	= https://xiph.org/vorbis/
 DOWNLOAD	= https://ftp.osuosl.org/pub/xiph/releases/vorbis/
 
-#depends_lib     port:libogg
-
-include ../ports.mk
+include ../port.mk
