tmux: --disable-utempter --disable-utf8proc

--- a/tmux/Makefile
+++ b/tmux/Makefile
@@ -7,4 +7,6 @@ DESCRIPTION	= terminal multiplexer
 HOMEPAGE	= https://github.com/tmux/
 DOWNLOAD	= $(HOMEPAGE)/$(NAME)/releases/download/$(VERSION)/
 
+CONFIGURE_FLAGS	+= --disable-utempter --disable-utf8proc
+
 include ../port.mk
