tmux depends on libevent

--- a/tmux/Makefile
+++ b/tmux/Makefile
@@ -7,6 +7,8 @@ DESCRIPTION	= terminal multiplexer
 HOMEPAGE	= https://github.com/tmux/
 DOWNLOAD	= $(HOMEPAGE)/$(NAME)/releases/download/$(VERSION)/
 
+DEPS		= libevent
+
 CONFIGURE_FLAGS	+= --disable-utempter --disable-utf8proc
 
 include ../port.mk
