--- a/opusfile/Makefile
+++ b/opusfile/Makefile
@@ -1,10 +1,10 @@
 include ../defaults.mk
 
 NAME		= opusfile
-VERSION		= 0.11
+VERSION		= 0.12
 DESCRIPTION	= decode opus files
 
 HOMEPAGE	= http://www.opus-codec.org
-DOWNLOAD	= https://archive.mozilla.org/pub/opus
+DOWNLOAD	= https://downloads.xiph.org/releases/opus/
 
 include ../port.mk
