python: libressl dep, more pkg content

--- a/python/Makefile
+++ b/python/Makefile
@@ -8,4 +8,7 @@ HOMEPAGE	= https://www.python.org
 DOWNLOAD	= $(HOMEPAGE)/ftp/python/$(VERSION)
 DISTNAME	= Python-$(VERSION).tgz
 
+DEPS		= libressl
+CONFIGURE_ARGS	+= --with-openssl=$(PREFIX) --with-ssl-default-suites=openssl
+
 include ../port.mk
