libsndfile: get rid of cmake

--- a/libsndfile/Makefile
+++ b/libsndfile/Makefile
@@ -2,11 +2,11 @@ include ../defaults.mk
 
 NAME		= libsndfile
 VERSION		= 1.2.0
+SUFFIX		= tar.xz
 
 DESCRIPTION	= read and write audio files
 HOMEPAGE	= https://github.com/$(NAME)/$(NAME)/
-DOWNLOAD	= $(HOMEPAGE)/archive/refs/tags/
-DISTNAME	= $(VERSION).tar.gz
+DOWNLOAD	= $(HOMEPAGE)/releases/download/$(VERSION)/
 
 DEPS		=		\
 		flac		\
@@ -17,7 +17,19 @@ DEPS		=		\
 		opus		\
 		opusfile
 
-CONFIGURE	= cmake
-CONFIGURE_ARGS	= .
+CONFIGURE_ARGS	+= \
+	--enable-shared		\
+	--disable-experimental	\
+	--enable-werror		\
+	--disable-cpu-clip	\
+	--disable-sqlite	\
+	--disable-alsa		\
+	--enable-external-libs	\
+	--disable-mpeg		\
+	--disable-octave	\
+	--enable-full-suite	\
+	--disable-test-coverage	\
+	--disable-ossfuzzers	\
+	--enable-largefile
 
 include ../port.mk
