--- a/vo-amrwbenc/Makefile
+++ b/vo-amrwbenc/Makefile
@@ -3,7 +3,7 @@ include ../defaults.mk
 NAME		= vo-amrwbenc
 VERSION		= 0.1.3
 
-DESCRIPTION	= Adaptive Multi Rate speech codec
+DESCRIPTION	= Adaptive Multi Rate Wide Band encoder
 HOMEPAGE	= https://sourceforge.net/projects/opencore-amr/
 DOWNLOAD	= ${HOMEPAGE}/files/${NAME}/
 
