tmux: upgrade to 3.6

--- a/tmux/Makefile
+++ b/tmux/Makefile
@@ -1,7 +1,7 @@
 include ../defaults.mk
 
 NAME		= tmux
-VERSION		= 2.7
+VERSION		= 3.6
 
 DESCRIPTION	= terminal multiplexer
 HOMEPAGE	= https://github.com/tmux/
@@ -9,6 +9,13 @@ DOWNLOAD	= $(HOMEPAGE)/$(NAME)/releases/download/$(VERSION)/
 
 DEPS		= libevent
 
-CONFIGURE_FLAGS	+= --disable-utempter --disable-utf8proc
+CONFIGURE_ARGS	+= \
+	--enable-option-checking\
+	--disable-silent-rules	\
+	--disable-utf8proc	\
+	--disable-systemd	\
+	--disable-cgroups	\
+	--disable-sixel		\
+	--disable-jemalloc
 
 include ../port.mk
